# network-threat-engine

./: .gitignore  CMakeLists.txt  README.md
docs/: architecture.md
src/: main.cpp
src/detection/: ThreatDetector.cpp  ThreatDetector.hpp
src/flow/: FlowKey.hpp  FlowTable.cpp  FlowTable.hpp
src/protocol/: ProtocolParser.cpp  ProtocolParser.hpp
src/storage/: AlertLogger.cpp  AlertLogger.hpp  JsonExporter.cpp  JsonExporter.hpp
src/ui/: Dashboard.cpp  Dashboard.cpp.save  Dashboard.hpp
